--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "^1.3.0"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 black = "^21.7b0"
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
