--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pandas = "^1.3.0"
 pytest = "^5.2"
 black = "^21.7b0"
 pylint = "^2.9.6"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
