--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.2.2"
 description = "Python library for monitoring Ark Invest funds data."
 repository = "https://github.com/frefrik/arkfunds-python"
 readme = "README.md"
-keywords = ["ark invest", "ark funds", "etf", "funds", "finance"]
+keywords = ["ark", "ark invest", "ark funds", "etf", "funds", "finance"]
 authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
 license = "MIT"
 packages = [
@@ -12,12 +12,12 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.7.1,<4.0"
 requests = "^2.26.0"
-pandas = "^1.3.0"
+pandas = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.4"
 black = "^21.7b0"
 pylint = "^2.9.6"
 isort = "^5.9.3"
