--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "arkfunds"
-version = "0.3.0"
+version = "0.3.1"
 description = "Python library for monitoring Ark Invest funds data."
 repository = "https://github.com/frefrik/arkfunds-python"
 readme = "README.md"
@@ -21,6 +21,8 @@ pytest = "^6.2.4"
 black = "^21.7b0"
 pylint = "^2.9.6"
 isort = "^5.9.3"
+Sphinx = "^4.1.2"
+sphinx-rtd-theme = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
