--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "arkfunds"
 version = "0.3.1"
 description = "Python library for monitoring Ark Invest funds data."
 repository = "https://github.com/frefrik/arkfunds-python"
-readme = "README.md"
+readme = "README.rst"
 keywords = ["ark", "ark invest", "ark funds", "etf", "funds", "finance"]
 authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
 license = "MIT"
@@ -16,13 +16,17 @@ python = ">=3.7.1,<4.0"
 requests = "^2.26.0"
 pandas = "^1.3.1"
 
+Sphinx = { version = "^4.1.2", optional = true }
+sphinx-rtd-theme = { version = "^0.5.2", optional = true }
+
+[tool.poetry.extras]
+docs = ["Sphinx", "sphinx_rtd_theme"]
+
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 black = "^21.7b0"
 pylint = "^2.9.6"
 isort = "^5.9.3"
-Sphinx = "^4.1.2"
-sphinx-rtd-theme = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
